--- a/lab_assignment_06.ipynb
+++ b/lab_assignment_06.ipynb
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {
         "id": "wO-mt5l3jb_2"
       },
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vsosiqVCourG",
-        "outputId": "c9175d71-5a6c-4443-c521-328df9acb9b5"
+        "outputId": "fad166bc-378e-4909-b0bf-38787da112ae"
       },
-      "execution_count": 27,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,9 +244,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xfUXbM1Po5Sy",
-        "outputId": "816d8fc7-bf2d-450d-a9e2-b586a7a8e804"
+        "outputId": "8bb76b43-a898-4ab3-89a2-57f07ac847dd"
       },
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X8MwQmYim-H1",
-        "outputId": "b375854a-a5a9-4ac4-ee25-f386b64ded88"
+        "outputId": "b3b81427-e9f8-4bd2-c1d4-9ad0bfd87a6d"
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_zL7aRMqCS7I",
-        "outputId": "9dfa2188-7fc4-4d31-b505-7754b38858f0"
+        "outputId": "cbc8877e-6224-454e-a225-3683f911b2f8"
       },
-      "execution_count": 30,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,9 +379,9 @@
           "height": 769
         },
         "id": "jOzDPFYMTFuB",
-        "outputId": "79a72d4e-1ee5-47be-8e6a-87eeffa2369f"
+        "outputId": "08c3edb6-1559-4bb5-b1ef-19afd3377234"
       },
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "yBolNKLZocWc"
       },
-      "execution_count": 32,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -425,9 +425,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vA-GM-yWsN_9",
-        "outputId": "e59192a4-bc05-47ad-b54a-c8794587c161"
+        "outputId": "52a5ab88-20fc-48ac-929d-48f53b570d87"
       },
-      "execution_count": 33,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,9 +456,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d71368f0-b00d-4b0d-b1d3-20b7899de6da"
+        "outputId": "81b0f448-b178-4f67-bc9c-f93cca5a5154"
       },
-      "execution_count": 34,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +468,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 9
         }
       ]
     },
@@ -477,22 +477,24 @@
       "source": [
         "#Calcualte the root mean square error (RMSE) which is a metric that tells us how far apart our predicted values are from our observed values in a model, on average\n",
         "RMSE=math.sqrt(np.square(np.subtract(forestPredictedValues,TestTargets)).mean())\n",
-        "print(RMSE)"
+        "print(\"RMSE Error\",RMSE)\n",
+        "print(\"Model Score\",rf.score(TrainFeatures,TrainTargets))"
       ],
       "metadata": {
         "id": "AK3yhtJ3XCLP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "394744c8-2cb5-46e3-82d9-efd309c4ea52"
+        "outputId": "ece9fd42-3ed4-4e0e-95c6-57c517085c3f"
       },
-      "execution_count": 35,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "19.11069071953916\n"
+            "RMSE Error 19.11069071953916\n",
+            "Model Score 0.9814837067903996\n"
           ]
         }
       ]
@@ -512,9 +514,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AvNFrVVktT1Y",
-        "outputId": "630c8c26-f72e-4ce4-bde8-0f6fdebf555e"
+        "outputId": "8b736e7e-34d9-4a21-cb4a-eaeeeed0d77f"
       },
-      "execution_count": 36,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +527,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 11
         }
       ]
     },
@@ -534,22 +536,24 @@
       "source": [
         "#Root Mean Squared Error for Decision Tree Regression Model\n",
         "RMSE=math.sqrt(np.square(np.subtract(decisionPredictedValues,TestTargets)).mean())\n",
-        "print(RMSE)"
+        "print(\"RMSE Error\",RMSE)\n",
+        "print(\"Model Score\",dt.score(TrainFeatures,TrainTargets))"
       ],
       "metadata": {
         "id": "qlzAO-5iYsT5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dca01b65-b735-4c5b-b3d4-1dd6b91e8875"
+        "outputId": "f86e8e91-e215-4d2e-dd05-ccce47f67a2b"
       },
-      "execution_count": 37,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "23.157567333143067\n"
+            "RMSE Error 23.3103408512826\n",
+            "Model Score 0.898116968062646\n"
           ]
         }
       ]
@@ -569,9 +573,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "652a23f0-a445-4710-dcd5-5ac9e0e3441f"
+        "outputId": "091e7475-1ee5-4b18-be51-cc6e6c24b38b"
       },
-      "execution_count": 38,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +586,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 13
         }
       ]
     },
@@ -591,22 +595,24 @@
       "source": [
         "#Root Mean Squared Error for Linear Regression Model\n",
         "RMSE=math.sqrt(np.square(np.subtract(linearPredictedValues,TestTargets)).mean())\n",
-        "print(RMSE)"
+        "print(\"RMSE Error\",RMSE)\n",
+        "print(\"Model Score\",lr.score(TrainFeatures,TrainTargets))"
       ],
       "metadata": {
         "id": "tZuXgMR3YtBH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc73fc17-6706-4180-db91-780f83526482"
+        "outputId": "1fdde790-c90e-4a1c-f3c9-2fd986986430"
       },
-      "execution_count": 39,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "35.91938778272201\n"
+            "RMSE Error 35.91938778272201\n",
+            "Model Score 0.4672291146700025\n"
           ]
         }
       ]
@@ -626,9 +632,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-OtDMftS0vXW",
-        "outputId": "0104b55b-9f59-4105-97af-ab5c8963627e"
+        "outputId": "f1b1ef5b-2fe0-4704-997c-8e4ff72c0f6f"
       },
-      "execution_count": 40,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,7 +644,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 15
         }
       ]
     },
@@ -647,22 +653,24 @@
       "source": [
         "#Root Mean Squared Error for K Neighbors Regression Model\n",
         "RMSE=math.sqrt(np.square(np.subtract(kneighbourPredictedValues,TestTargets)).mean())\n",
-        "print(RMSE)"
+        "print(\"RMSE Error\",RMSE)\n",
+        "print(\"Model Score\",kn.score(TrainFeatures,TrainTargets))"
       ],
       "metadata": {
         "id": "Qtz3GsJ4YvnD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b1cb695-a4e5-4c63-ad93-ca30d38dbe77"
+        "outputId": "02dd114b-1d48-484d-9dc6-645351d131ea"
       },
-      "execution_count": 41,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "34.476138596420824\n"
+            "RMSE Error 34.476138596420824\n",
+            "Model Score 0.689426174039914\n"
           ]
         }
       ]
@@ -680,7 +688,7 @@
       "metadata": {
         "id": "pAtnepC_03Z3"
       },
-      "execution_count": 42,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -694,7 +702,7 @@
       "metadata": {
         "id": "RdDLglGw07G9"
       },
-      "execution_count": 43,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -711,9 +719,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ae52441-06ec-4fe1-f6a5-ac969582503d"
+        "outputId": "75e8370f-5cc6-47de-a9a6-5a28865c16c3"
       },
-      "execution_count": 44,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
